--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,12 @@
       "@utils/*": [
         "src/utils/*"
       ],
+      "@styles": [
+        "src/styles"
+      ],
+      "@styles/*": [
+        "src/styles/*"
+      ],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
