--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,12 @@
       "@styles/*": [
         "src/styles/*"
       ],
+      "@components": [
+        "src/components"
+      ],
+      "@components/*": [
+        "src/components/*"
+      ],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
