--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.1",
+    "@splidejs/react-splide": "^0.7.8",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-swipeable-views": "^0.14.0",
     "typeface-blinker": "^1.1.13"
   },
   "devDependencies": {
